assets/css/style.css
/* create custom CSS variables (also called custom properties) and apply them to the root of the page, making them accessible to all other CSS */
:root {
    /* declare a variable with `--` syntax */
    --dark:  darkblue;;
    --light: lightblue;
    --bg-1: rgb(58, 57, 57);
    --bg-2: sandybrown;
    --navlink-color: slategray;
}

* {
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
} 

.top-header {
  display: flex;
  padding: 0px;
  text-align: center;
  background: linear-gradient(var(--dark), black);
  color: #fff;
  width: auto;
  height: 150px;
  margin: auto;
}

header h1 {
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-size: 45pt;
  position: absolute;
  left:25%;

}

header img {
  border-radius: 40%;
  width: auto;
  height: 90%;
  position: relative;
  left: 5px;
  top: 10px;
}

nav {
  display: flex;
  /* rgb(58, 57, 57); */
  background-color: black;
  position: relative;
  width: auto;
  height: 20px;
  top: 80%;
  left: 60%
}

nav a {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 10pt;
  font-weight: bold;
  color: white;
  text-decoration: solid;
  padding: 14px 20px;
  text-decoration: none;
  text-align: center;
}

main {
  display: flex;
  flex-wrap: wrap;
  flex-grow: 1;
}

aside {
  /* flex: 1; */
  font-weight: bold;
  font-size: 14pt;
  background-color: #b9c6ae;
  /* padding: 5px; */
  text-align: right;
  width: 130px;
}

aside div {
  justify-content: right;
}

#about{
  border-right-width: 2px;
  border-right-style: solid;
  background-color: #b9c6ae;
  /* border-top-width: 2px;
  border-top-style: solid; */
  padding-right: 10px;
  margin-right: 0px;
  height: 10%;

}

#portfolio{
  border-right-width: 2px;
  border-right-style: solid;
  background-color: #b9c6ae;
  /* border-bottom-width: 2px; */
  /* border-bottom-style: solid; */
  padding-right: 10px;
  margin-right: 0px;
  height: 76.8%;

}

#contact{
  border-right-width: 2px;
  border-right-style: solid;
  /* border-top-width: 2px;
  border-top-style: solid; */
  background-color: #b9c6ae;
  padding-right: 10px;
  margin-right: 0px;
  height: 7%;
}

.portfolio {
  display: flex;
  flex-wrap: wrap;
  flex: 4;
  background-color: #fff;
  justify-content: center;
  
}

.about_me {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 14pt;
  /* border-bottom-width: 1px;
  border-bottom-style: dashed; */
  margin: 0px;
  padding: 10px;
  /* border-left-width: 2px;
  border-left-style: solid; */
}
.divider{
  display: block;
  justify-content: center;
  position: relative;
  left:40%;
  
}
.dot {
  height: 15px;
  width: 15px;
  padding: 2px;
  margin: 5px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  justify-self: center;
}

/* .portfolio section{
  border-left-width: 2px;
  border-left-style: solid;
} */

/* Added border-radius to match the card */
.big-card{
  padding-top: 20px;
}
.big-card header {
  /* border-radius: 50px 50px 0px 0px; */
  background-color:  #b9c6ae;
  color: black;
  font-family: Arial, Helvetica, sans-serif;
  
  position: relative;
  top: 300px;
  padding: 5px;
  width: 200px;

  border-style: solid;
  border-width: 1px;
  border-color: black;
  /* margin-left: 5px; */
  
}


.big-card img {
  border-style: solid;
  border-width: 1px;
  height: 350px;
  width: auto;
}

/* Added rotation, box-shadow, border-radius */
.card {
  /* flex: 0 0 100px; */
  margin: 15px;
}

/* Added border-radius to match the card */
.card header {
  /* border-radius: 50px 50px 0px 0px;
  padding: 20px; */
  background-color:  #b9c6ae;
  color: black;
  border-style: solid;
  border-width: 1px;
  border-color: black;
  position: relative;
  top: 170px;
}


.card img {
  border-style: solid;
  border-width: 1px;
  height: auto;
  width: 300px;
}

footer {
  width: 100%;
  bottom: 0;
  padding: 20px;
  text-align: center;
  background: #13293d;
  color: #fff;
  margin-top: auto;
}

@media screen and (max-min: 968px) {

}

@media screen and (max-width: 768px) {
  
}

  @media screen and (max-width: 544px) {

}

